compiler/test/runnable/extra-files/m1.d
// https://issues.dlang.org/show_bug.cgi?id=18412

import m2: f;
void main() { f(); }
